--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,14 @@
   --bg-color: #ffffff;
   --fg-color: #003366;
 
+  --color-link-link: #0a61b9;
+  --color-link-hover: #b90a50;
+  --color-link-link-dark: #d8d8f0;
+  --color-link-hover-dark: #f77ed9;
+
+  --link-link: var(--color-link-link);
+  --link-hover: var(--color-link-hover);
+
   --h1-SOFT: 100;
   --h1-WONK: 1;
 
@@ -74,10 +82,27 @@ body {
   position: relative;
 }
 
+.page {
+  display: grid;
+  grid-template-rows: auto max-content;
+  height: 100%;
+}
+
 main {
   display: flex;
-  height: 95vh;
   justify-content: center;
+}
+
+footer {
+  font-weight: 300;
+  font-size: 0.875rem;
+  text-align: center;
+}
+
+footer p {
+  margin: 0 auto 0.5rem;
+  max-width: min(60rem, 85vw);
+  text-align: left;
 }
 
 h1 {
@@ -116,6 +141,17 @@ h3 {
   font-variation-settings: 'opsz' 12, 'WONK' var(--h3-WONK), 'SOFT' var(--h3-SOFT);
   font-weight: 550;
   text-align: center;
+}
+
+a:link,
+a:visited {
+  color: var(--link-link);
+}
+
+a:hover,
+a:focus,
+a:active {
+  color: var(--link-hover);
 }
 
 .hgroup {
@@ -166,6 +202,8 @@ h3 {
   :root {
     --bg-color: #04192e;
     --fg-color: #ffffff;
+    --link-link: var(--color-link-link-dark);
+    --link-hover: var(--color-link-hover-dark);
   
   }
   .the-pixel:before {
